adding poiOrder for pointofinterest and zoomvalue, long, lat for route
